# building

./: .gitignore  CMakeLists.txt  readme.md
A/: preparing.py
B/: CMakeLists.txt  lib.h
C/: main-test.cpp  main.cpp  main.h  tests.cpp
